Fixed faq section mobile orientation

--- a/src/components/FaqSection/FaqContent.module.css
+++ b/src/components/FaqSection/FaqContent.module.css
@@ -51,4 +51,7 @@
   .accordionContent p{
     text-align: left !important;
   }
+  .faqSection{
+    flex-direction: column-reverse !important;
+  }
 }
